# hayashii-mcc

./: .gitignore  .gitmodules  .travis.yml  Alpha.hs  Closure.hs  Graph.hs  HayashiiMCC.cabal  Id.hs  Interfere.hs  KNormal.hs  LICENSE  MLexer.x  MParser.y  Main.hs  Makefile  README.md  SSA.hs  SSACSE.hs  SSADom.hs  SSAElim.hs  SSAFold.hs  SSALiveness.hs  SSALoop.hs  SSAOpt.hs  SSAProp.hs  SSAReduce.hs  SSASimpl.hs  Syntax.hs  Type.hs  Typing.hs  converter.c  minCamlHask.cabal
lib/: fl.ml
llvm/: Emit.hs
sample/: add.ml  cond.ml  float-easy.ml  insertion_sort.ml
test/: LivenessTest.hs  ParserTest.hs  SSATest.hs  TypingTest.hs
zekamashi/: AsmHelper.hs  Emit.hs  Inst.hs  PhiElim.hs  RegAlloc.hs  Virtual.hs  libmincaml.txt
