name: MinCamlHask
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: silentkiddie-2014@yahoo.co.jp
homepage: https://github.com/ProcessorCompilerExperiment2014-Team0/melodic/tree/min-caml-hask
synopsis: MinCaml on Haskell
description: MinCaml transplanted from OCaml to Haskell
category: Language
author: koba-e964
data-dir: ""
 
executable min-caml-zek
    build-depends: base >=4 && <5, array >=0.4, mtl >=2.2,
                   containers >=0.5, primitive >=0.5, transformers >=0.3.0.0,
                   data-binary-ieee754 >= 0.4
    main-is: Main.hs
    buildable: True
    build-tools: alex -any, happy -any
    default-language: Haskell2010
    hs-source-dirs: ./ zekamashi/
    other-modules: SSA Typing Type Typing Type Syntax MLexer MParser
    ghc-options: -Wall
 
test-suite test-parser
    build-depends: base >=4 && <5, array >=0.4, mtl >=2.2,
                   containers >=0.5, primitive >=0.5, transformers >=0.3.0.0,
                   test-framework >=0.8, HUnit >=1.2, test-framework-hunit >=0.3
    type: exitcode-stdio-1.0
    main-is: ParserTest.hs
    buildable: True
    build-tools: alex -any, happy -any
    default-language: Haskell2010
    hs-source-dirs: . test/
    other-modules: MLexer MParser
    ghc-options: -Wall
test-suite test-typing
    build-depends: base >=4 && <5, array >=0.4, mtl >=2.2,
                   containers >=0.5, primitive >=0.5, transformers >=0.3.0.0,
                   test-framework >=0.8, HUnit >=1.2, test-framework-hunit >=0.3
    type: exitcode-stdio-1.0
    main-is: TypingTest.hs
    buildable: True
    build-tools: alex -any, happy -any
    default-language: Haskell2010
    hs-source-dirs: . test/
    other-modules: MLexer MParser
    ghc-options: -Wall
test-suite test-ssa
    build-depends: base >=4 && <5, array >=0.4, mtl >=2.2,
                   containers >=0.5, primitive >=0.5, transformers >=0.3.0.0,
                   test-framework >=0.8, HUnit >=1.2, test-framework-hunit >=0.3
    type: exitcode-stdio-1.0
    main-is: SSATest.hs
    buildable: True
    build-tools: alex -any, happy -any
    default-language: Haskell2010
    hs-source-dirs: . test/
    other-modules: MLexer MParser
    ghc-options: -Wall
test-suite test-liveness
    build-depends: base >=4 && <5, array >=0.4, mtl >=2.2,
                   containers >=0.5, primitive >=0.5, transformers >=0.3.0.0,
                   test-framework >=0.8, HUnit >=1.2, test-framework-hunit >=0.3
    type: exitcode-stdio-1.0
    main-is: LivenessTest.hs
    buildable: True
    build-tools:
    default-language: Haskell2010
    hs-source-dirs: . test/
    other-modules:
    ghc-options: -Wall
